--- a/app/src/main/res/values-ja/strings.xml
+++ b/app/src/main/res/values-ja/strings.xml
@@ -3,4 +3,5 @@
     <string name="title_home">ホーム</string>
     <string name="title_timeline">タイムライン</string>
     <string name="title_settings">設定</string>
+    <string name="myitem_image">アイテム</string>
 </resources>
