--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,5 @@
     <string name="title_home">Home</string>
     <string name="title_timeline">Timeline</string>
     <string name="title_settings">Settings</string>
+    <string name="myitem_image">MyItem</string>
 </resources>
